--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "aicommits",
+	"name": "@jim/aicommits",
 	"version": "0.0.0-semantic-release",
 	"description": "Writes your git commit messages for you with AI",
 	"keywords": [
